Fix button on iOS

--- a/portfolio/home/static/home/css/style.css
+++ b/portfolio/home/static/home/css/style.css
@@ -35,6 +35,10 @@ body {
   padding: 5px;
 }
 
+.email-wrapper button {
+  -webkit-appearance: none;
+}
+
 .contact {
   text-align: center
 }
